--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "webverse",
   "private": true,
-  "version": "0.0.0",
+  "version": "1.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -14,7 +14,8 @@
     "bootstrap-icons": "^1.11.3",
     "framer-motion": "^11.0.25",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "use-dark-mode": "^2.3.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
